# kurs777

./: pyproject.toml  requirements.txt
coursework_7/: .flake8
coursework_7/config/: settings.py  urls.py
coursework_7/habits/: admin.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
coursework_7/habits/migrations/: 0001_initial.py  0002_initial.py
coursework_7/user/: admin.py  models.py  serializers.py
coursework_7/user/management/commands/: csu.py
coursework_7/user/migrations/: 0001_initial.py
